# openff-qcsubmit

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  404.html  Code_of_Conduct.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  codecov.yml  index.html  mkdocs.yml  pyproject.toml  run-optimization.py  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml  Lint.yaml
Collecting_results/: index.html
base_component/: index.html
conformer_generation/: index.html
datasets/: index.html
devtools/: README.md
devtools/conda-envs/: ani_env.yaml  basic.yaml  docs.yaml  edge.yaml  psi4.yaml  psi4_env.yaml  test_env.yaml
devtools/scripts/: create_conda_env.py
docs/: Collecting_results.ipynb  Makefile  README.md  api.rst  base_component.md  conf.py  conformer_generation.md  datasets.md  environment.yml  exceptions.md  factories.md  filters.md  getting_started.rst  index.md  index.rst  input.md  input.rst  installation.md  installation.rst  make.bat  procedures.md  releasehistory.md  releasehistory.rst  state_enumeration.md
docs/_static/css/: theme_overrides.css
docs/developer/: builddocs.md  builddocs.rst
docs/examples/: creating-datasets.nblink  retrieving-results.nblink
examples/: Calculating collections with MM.ipynb  Collecting results.ipynb  Optimization benchmarks.ipynb  creating-datasets.ipynb  creating_workflows.ipynb  retrieving-results.ipynb
exceptions/: index.html
factories/: index.html
filters/: index.html
openff/qcsubmit/: __init__.py  _pydantic.py  _version.py  common_structures.py  constraints.py  exceptions.py  factories.py  procedures.py  results.py  serializers.py  testing.py  utils.py  validators.py
openff/qcsubmit/_tests/: conftest.py  test_common_structures.py  test_datasets.py  test_factories.py  test_procedures.py  test_serializers.py  test_submissions.py  test_workflow_components.py
openff/qcsubmit/data/: 3_torsions.sdf  TRP-stripped.mol2  TRP.mol2  charged_molecules.smi  ethane.sdf  functional_groups.yaml  hdf5-example.hdf5  imatinib_mesylate.mol  imatinib_mesylate.sdf  invalid_double_torsion_dataset.json  invalid_improper_dataset.json  invalid_linear_dataset.json  invalid_torsion_dataset.json  issue_223_confs.sdf  molecular_complex.json  settings.yaml  settings_with_workflow.json  settings_with_workflow.yaml  tiny-opt-dataset.json  valid_double_torsion_dataset.json  valid_improper_dataset.json  valid_torsion_dataset.json
openff/qcsubmit/datasets/: __init__.py  dataset_utils.py  datasets.py  entries.py
openff/qcsubmit/results/: __init__.py  caching.py  filters.py  results.py
openff/qcsubmit/tests/: conftest.py  test_common_structures.py  test_datasets.py  test_factories.py  test_qcsubmit.py  test_results.py  test_serializers.py  test_submissions.py  test_workflow_components.py
openff/qcsubmit/utils/: __init__.py  smirnoff.py  utils.py  visualize.py
openff/qcsubmit/workflow_components/: __init__.py  base.py  base_component.py  conformer_generation.py  filters.py  (+3 more)
procedures/: index.html
qcsubmit/: __init__.py  _version.py  common_structures.py  constraints.py  datasets.py  exceptions.py  factories.py  procedures.py  results.py  serializers.py  testing.py  utils.py  validators.py
qcsubmit/data/: benzene.sdf  ethanol.sdf  functional_groups_error.yaml  invalid_double_torsion_dataset.json  invalid_linear_dataset.json  linear_molecules.sdf  methanol.sdf  settings.json  settings.yaml  settings_with_workflow.json  settings_with_workflow.yaml  stereoisomers.smi  tautomers.smi  tautomers_small.smi
qcsubmit/datasets/: __init__.py  dataset_utils.py  datasets.py  entries.py
qcsubmit/tests/: test_datasets.py  test_factories.py  test_qcsubmit.py  test_results.py  test_serializers.py  test_submissions.py  test_workflow_components.py
qcsubmit/workflow_components/: __init__.py  base.py  base_component.py  conformer_generation.py  custom_componet.py  filters.py  fragmentation.py  state_enumeration.py
state_enumeration/: index.html
(+16 files in other folders)
