[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
name = "openff-qcsubmit"
description = "qcsubmit"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Open Force Field Consortium", email = "info@openforcefield.org" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]

[tool.setuptools]
packages.find.include = [ "openff.qcsubmit*" ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.black]
line-length = 88
target-version = [ "py312" ]
exclude = "openff/qcsubmit/_tests"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage]
run.omit = [
  "*/*/_tests/*",
]
report.exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
